--- a/index.html
+++ b/index.html
@@ -1,9 +1,17 @@
 <html>
 <head>
-    <title>Cats</title>
+    <title>Cats lover's site</title>
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-    <div></div>
+<div class="catalog">****************Catalog of cats****************</div>
+<p></p>
+<div class="menu">Name:<br><br>Surname:<br><br>Age:<br><br>Weight:<br><br>Photo:</div>
+<div class="catsphotos">King of fish<br>
+    <img src="images/1.jpg"/>
+    <img src="images/2.jpeg"/><br>Family of His Majesty<br>
+    <img src="images/3.jpg"/>
+    <img src="images/4.jpg"/></div>
 </body>
 </html>
+
