11, первое задание - correction

--- a/index.html
+++ b/index.html
@@ -4,14 +4,30 @@
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-<div class="catalog">****************Catalog of cats****************</div>
-<p></p>
-<div class="menu">Name:<br><br>Surname:<br><br>Age:<br><br>Weight:<br><br>Photo:</div>
-<div class="catsphotos">King of fish<br>
-    <img src="images/1.jpg"/>
-    <img src="images/2.jpeg"/><br>Family of His Majesty<br>
-    <img src="images/3.jpg"/>
-    <img src="images/4.jpg"/></div>
+<div class="catalog-wrapper">
+    <div class="catalog">
+        ****************Catalog of cats****************
+    </div>
+</div>
+<div class="menu-wrapper">
+    <div class="menu">
+        <div class="italic red">Name:</div>
+        <div class="italic green">Surname:</div>
+        <div class="red">Age:</div>
+        <div>Weight:</div>
+        <div>Photo:</div>
+    </div>
+</div>
+<div class="cats-photos-wrapper">
+    <div class="cats-photos">
+        King of fish<br>
+        <img src="images/1.jpg">
+        <img src="images/2.jpeg">
+        <br>Family of His Majesty<br>
+        <img src="images/3.jpg">
+        <img src="images/4.jpg">
+    </div>
+</div>
 </body>
 </html>
 
